# almost_chess

./: .gitignore  CMakeLists.txt  README.md
src/: ai.cpp  ai.hpp  board.hpp  constants.hpp  event.hpp  field.cpp  field.hpp  game.hpp  game.inl  main.cpp  position.hpp  render.cpp  render.hpp  turn.hpp
